--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
   height: 100vh;
 }
 
+.root {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
